add entry point that returns path to monaco-editor

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@gfxfundamentals/live-editor",
   "version": "1.0.0",
   "description": "live code editor",
-  "main": "na",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
